License and readme fix
License replaced by approved version and filename.
Readme adds issue reporting, author and license sections at the bottom.
Package.json author property replaced with Auth0.

--- a/package.json
+++ b/package.json
@@ -8,11 +8,7 @@
     "socket.io",
     "jwt"
   ],
-  "author": {
-    "name": "José F. Romaniello",
-    "email": "jfromaniello@gmail.com",
-    "url": "http://joseoncode.com"
-  },
+  "author": "Auth0",
   "repository": {
     "type": "git",
     "url": "https://github.com/auth0/socketio-jwt.git"
