--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,9 @@ node_js:
   - "9.11.1"
   - "10.3.0"
   - "10.5.0"
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
